--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "ski-size-app",
+  "name": "ski-size-helpr",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://bwick04.github.io/ski-size-helpr",
   "dependencies": {
     "bootstrap": "^4.1.3",
     "react": "^16.3.2",
@@ -15,6 +16,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.0"
   }
 }
