--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-radio-buttons": "^1.2.2",
     "react-scripts": "1.1.5",
     "react-toggle-button": "^2.2.0",
-    "reactstrap": "^6.4.0"
+    "reactstrap": "^6.4.0",
+    "gh-pages": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,8 +20,5 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  },
-  "devDependencies": {
-    "gh-pages": "^2.0.0"
   }
 }
