--- a/package.json
+++ b/package.json
@@ -2,23 +2,23 @@
   "name": "ski-size-helpr",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://bwick04.github.io/ski-size-helpr",
+  "homepage": "https://bwick04.github.io/ski-size-helpr/",
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "gh-pages": "^2.0.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-radio-buttons": "^1.2.2",
-    "react-scripts": "1.1.5",
+    "react-scripts": "^1.1.5",
     "react-toggle-button": "^2.2.0",
-    "reactstrap": "^6.4.0",
-    "gh-pages": "^2.0.0"
+    "reactstrap": "^6.4.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   }
 }
