--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "private": true,
   "homepage": "https://bwick04.github.io/ski-size-helpr/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.6",
+    "@fortawesome/free-solid-svg-icons": "^5.4.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^4.1.3",
+    "font-awesome": "^4.7.0",
     "gh-pages": "^2.0.0",
+    "i": "^0.3.6",
+    "npm": "^6.4.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-radio-buttons": "^1.2.2",
@@ -20,5 +26,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.4.1"
   }
 }
